chore: update api docs
