# app/Docs/Schema/Cache/Item/Statuses.php
@@ -8,256 +8,60 @@ use OpenApi\Attributes as OA;
     OA\Schema(
         title: 'Statuses',
         properties: [
-            new OA\Property(
-                property: '1stSpellCost',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: '2ndSpellCost',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: '3rdSpellCost',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: '4thSpellCost',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'raw1stSpellCost',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'raw2ndSpellCost',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'raw3rdSpellCost',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'raw4thSpellCost',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'rawSpellDamage',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'rawMainAttackDamage',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'mainAttackDamage',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'rawHealthRegen',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'rawHealth',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'walkSpeed',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'soulPointRegen',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'stealing',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'rawStrength',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'rawDexterity',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'rawIntelligence',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'rawDefence',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'rawAgility',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'earthDamage',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'thunderDamage',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'waterDamage',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'fireDamage',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'airDamage',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'earthDefence',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'thunderDefence',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'waterDefence',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'fireDefence',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'airDefence',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'rawJumpHeight',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'rawSpellDamage',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'gatherXPBonus',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'attackSpeed',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'spellDamage',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'healthRegen',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'poison',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'lifeSteal',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'manaRegen',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'exploding',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'sprint',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'sprintRegen',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'lootBonus',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'lootQuality',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'gatherSpeed',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'xpBonus',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'manaSteal',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'thorns',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
-            new OA\Property(
-                property: 'reflection',
-                ref: '#/components/schemas/ItemStatus',
-                nullable: true,
-            ),
+            new OA\Property('1stSpellCost', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('2ndSpellCost', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('3rdSpellCost', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('4thSpellCost', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('raw1stSpellCost', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('raw2ndSpellCost', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('raw3rdSpellCost', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('raw4thSpellCost', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawSpellDamage', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawMainAttackDamage', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('mainAttackDamage', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawHealthRegen', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawHealth', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('walkSpeed', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('soulPointRegen', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('stealing', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawStrength', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawDexterity', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawIntelligence', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawDefence', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawAgility', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('earthDamage', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('thunderDamage', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('waterDamage', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('fireDamage', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('airDamage', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('earthDefence', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('thunderDefence', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('waterDefence', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('fireDefence', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('airDefence', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawJumpHeight', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawThunderSpellDamage', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawFireSpellDamage', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawAirSpellDamage', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawEarthSpellDamage', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('rawWaterSpellDamage', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('attackSpeed', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('gatherXpBonus', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('spellDamage', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('healthRegen', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('poison', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('lifeSteal', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('manaRegen', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('exploding', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('sprint', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('sprintRegen', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('lootBonus', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('lootQuality', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('gatherSpeed', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('xpBonus', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('manaSteal', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('thorns', '#/components/schemas/ItemStatus', nullable: true),
+            new OA\Property('reflection', '#/components/schemas/ItemStatus', nullable: true),
         ],
         type: "object"
     ),
